--- a/contactus.html
+++ b/contactus.html
@@ -3,10 +3,20 @@
 <head>
 <meta charset="utf-8">
 <title>Contact Us | Slammers Beach Volleyball</title>
+<link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<h1>Contact Us</h1>
-<p>&nbsp;</p>
-</body>
+<h1>
+Contact Us</h1>
+<p>Contact us anytime to enquire about:</p>
+<ul>
+<li>Playing at Slammers</li>
+<li>Registering a new team</li> 
+<li>Booking a private function   (e.g. school groups, team-building events, birthdays)</li>
+<li>Information about competitions</li>
+</ul>
+  <p>Our friendly staff is waiting to hear from you.</p>
+<div class="table"><h3>Contact Us:</h3>
+</div></body>
 </html>
