--- a/guidelines.html
+++ b/guidelines.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Register | Slammers Beach Volleyball</title>
+<title>About Us | Slammers Beach Volleyball</title>
 <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 
