--- a/aboutvolleyball.html
+++ b/aboutvolleyball.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>About Volleyball | Slammers Beach Volleyball</title>
+<link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -14,27 +15,32 @@
    </li>
    <li><h4><a href="#links">Links</a></h4>
    </li></ul>
-<img src="spike.jpg" width="1432" height="1002" alt=""/>
+<img src="spike.jpg" width="1027" height="671" alt=""/>
+<div class="container">
 <h3><a name="background"></a>Background</h3>
 <p>Volleyball  is a team sport played by two teams on a playing court divided by a net. <br>
   The sport  originated in the United States, and is now just achieving the type of  popularity in the U.S. that it has received on a global basis, where it ranks  behind only soccer among participation sports. <br>
-There are  800 million players worldwide who play volleyball at least once a week. </p><br><br>
+There are  800 million players worldwide who play volleyball at least once a week. </p>
+</div>
+<div class="container">
 <h3><a name="gamerules"></a>Game Rules</h3>  
-<p>The objective of the game is for each team to send the ball regularly over the net to ground it on the opponent's court, and to prevent the ball from being grounded on its  own court. The ball is put into play by the right back-row player who serves  the ball by hitting it over the net to the opponent's court. A team is allowed  to hit the ball three times (in addition to the block contact) to return it to  the opponent's court. A player is not allowed to hit the ball twice  consecutively, except when attempting a block. The rally continues until the  ball touches the ground/floor, goes &quot;out&quot; or a team fails to return  it to the opponent's court or commits a fault. </p><br>
-  <br>
+<p>The objective of the game is for each team to send the ball regularly over the net to ground it on the opponent's court, and to prevent the ball from being grounded on its  own court. The ball is put into play by the right back-row player who serves  the ball by hitting it over the net to the opponent's court. A team is allowed  to hit the ball three times (in addition to the block contact) to return it to  the opponent's court. A player is not allowed to hit the ball twice  consecutively, except when attempting a block. The rally continues until the  ball touches the ground/floor, goes &quot;out&quot; or a team fails to return  it to the opponent's court or commits a fault. </p>
+  </div>
+  <div class="container">
 <h3><a name="gamescore"></a>Game Score</h3>
 <p>The team winning a rally scores a point (Rally Point System). When the  receiving team wins a rally, it gains a point and the right to serve, and its  players rotate one position clockwise. <br>
-  The best of  three or best of five games will win matches. Each non-deciding game will be  won by the team that first scores 25 points with a minimum two-point advantage  (no scoring cap). If there is a deciding game, it will be won by the team that  first scores 15 points with a minimum two-point advantage (no scoring cap). <br>
+The best of  three or best of five games will win matches. Each non-deciding game will be  won by the team that first scores 25 points with a minimum two-point advantage  (no scoring cap). If there is a deciding game, it will be won by the team that  first scores 15 points with a minimum two-point advantage (no scoring cap).</p> 
+<br>
 <p>Source: <a href="http://www.volleyball.org/whatis.html"><em>http://www.volleyball.org/whatis.html </em></a></p>
-<br>
-<br>
+</div>
+<div class="container">
 <h3><a name="links"></a>Links</h3>
 <p> Additional information on Volleyball:</p>
 <ul>
-   <li>http://www.volleyball.org/ - Volleyball worldwide </li>
-<li>http://www.fivb.org/EN/beachvolleyball/ - FIVB International  Federation of Volleyball, Beach </li>   
-    <li>
-      avp.com – Association of Volleyball Professionals </li>
+   <li><a href="http://www.volleyball.org">Volleyball worldwide</a> </li>
+<li><a href="http://www.fivb.org/EN/beachvolleyball">FIVB International  Federation of Volleyball, Beach</a> </li>   
+    <li><a href="http://www.avp.com">Association of Volleyball Professionals</a> </li>
       </ul>
+</div>
 </body>
 </html>
