Edited and added files
Added registration and edited competitions and contactus

--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,30 @@ Contact Us</h1>
 <li>Booking a private function   (e.g. school groups, team-building events, birthdays)</li>
 <li>Information about competitions</li>
 </ul>
-  <p>Our friendly staff is waiting to hear from you.</p>
-<div class="table"><h3>Contact Us:</h3>
-</div></body>
+<table>
+  <tr>
+  <td>Phone:</td>
+  <td>4771 2233</td>
+  </tr>
+  
+  <tr>
+  <td>Fax:</td>
+  <td>4771 2244</td>
+  </tr>
+  
+  <tr>
+  <td>Address:</td>
+  <td>123 Pokemund Street, Cairsville</td>
+  </tr>
+  
+  <tr>
+  <td>Email:</td>
+  <td>slammers@gmail.com</td>
+  </tr>
+</table>
+<p>Our friendly staff is here to help with your enquiries, feedback or suggestions.</p>
+
+<p>Call us today!</p>
+  
+</body>
 </html>
