--- a/competitions.html
+++ b/competitions.html
@@ -8,8 +8,153 @@
 
 <body>
 <h1>Competitions</h1>
-<p><a title="By David Bunting from England (Beach Volleyball Classic 2007) [CC BY 2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ABeach_Volleyball_Classic_2007_(1444259070).jpg"><img width="600" alt="Beach Volleyball Classic 2007 (1444259070)" src="600px-Beach_Volleyball_Classic_2007_(1444259070).jpg"/></a>
+
+<p>We organise our very own 'Slammers Tournament' for those keen to play in a professional,competitive atmosphere. It is always an exciting event for both players and spectators alike. </p>
+
+<p>The new season for the next 4-a-side weekend competition starts on August 21st. </p>
+
+<p> Register your team <a href="registration.html">NOW</a>!!</p>
+
+<p>Or come to cheer on your favourite team!</p>
+  
+<div><p><a title="By David Bunting from England (Beach Volleyball Classic 2007) [CC BY 2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ABeach_Volleyball_Classic_2007_(1444259070).jpg"><img width="600" alt="Beach Volleyball Classic 2007 (1444259070)" src="600px-Beach_Volleyball_Classic_2007_(1444259070).jpg"/></a>
 <br>
 By David Bunting from England (Beach Volleyball Classic 2007) [<a href="http://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ABeach_Volleyball_Classic_2007_(1444259070).jpg">via Wikimedia Commons</a></p>
+
+ <table>
+ <caption><h3>Slammers Tournament Ladder</h3></caption>
+ <tr>
+  <td>Positions</td>
+  <td>Team</td>
+  <td>Played</td>
+  <td>Wins</td>
+  <td>Losses</td>
+  <td>Draws</td>
+  <td>For Points</td>
+  <td>Against Points</td>
+  <td>Points</td>
+ </tr>
+ 
+ <tr>
+  <td>1</td>
+  <td>Beachies</td>
+  <td>13</td>
+  <td>13</td>
+  <td>0</td>
+  <td>0</td>
+  <td>651</td>
+  <td>312</td>
+  <td>189</td>
+ </tr>
+ 
+ <tr>
+  <td>2</td>
+  <td>Wardsandy</td>
+  <td>13</td>
+  <td>10</td>
+  <td>2</td>
+  <td>1</td>
+  <td>541</td>
+  <td>443</td>
+  <td>169</td>
+ </tr>
+ 
+ <tr>
+  <td>3</td>
+  <td>Flashmann</td>
+  <td>14</td>
+  <td>8</td>
+  <td>5</td>
+  <td>1</td>
+  <td>559</td>
+  <td>552</td>
+  <td>167</td>
+ </tr>
+ 
+ <tr>
+  <td>4</td>
+  <td>Googlers</td>
+  <td>14</td>
+  <td>7</td>
+  <td>6</td>
+  <td>1</td>
+  <td>558</td>
+  <td>485</td>
+  <td>163</td>
+ </tr>
+ 
+ <tr>
+  <td>5</td>
+  <td>Holdsworthy</td>
+  <td>14</td>
+  <td>8</td>
+  <td>6</td>
+  <td>0</td>
+  <td>528</td>
+  <td>517</td>
+  <td>162</td>
+ </tr>
+ 
+ <tr>
+  <td>6</td>
+  <td>Spikers</td>
+  <td>14</td>
+  <td>4</td>
+  <td>9</td>
+  <td>1</td>
+  <td>488</td>
+  <td>588</td>
+  <td>146</td>
+ </tr>
+ 
+ <tr>
+  <td>7</td>
+  <td>Pikers</td>
+  <td>13</td>
+  <td>4</td>
+  <td>7</td>
+  <td>0</td>
+  <td>495</td>
+  <td>518</td>
+  <td>145</td>
+ </tr>
+ 
+ <tr>
+  <td>8</td>
+  <td>Larneys</td>
+  <td>14</td>
+  <td>3</td>
+  <td>11</td>
+  <td>0</td>
+  <td>537</td>
+  <td>623</td>
+  <td>139</td>
+ </tr>
+ 
+ <tr>
+  <td>9</td>
+  <td>Setties</td>
+  <td>12</td>
+  <td>6</td>
+  <td>6</td>
+  <td>0</td>
+  <td>460</td>
+  <td>484</td>
+  <td>137</td>
+ </tr>
+ 
+ <tr>
+  <td>10</td>
+  <td>Side Out</td>
+  <td>12</td>
+  <td>3</td>
+  <td>9</td>
+  <td>0</td>
+  <td>454</td>
+  <td>451</td>
+  <td>136</td>
+ </tr>
+</table> 
+</div>
 </body>
 </html>
