--- a/guidelines.html
+++ b/guidelines.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>About Us | Slammers Beach Volleyball</title>
+<title>Playing Guidelines | Slammers Beach Volleyball</title>
 <link href="mainstyles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<h2>Playing Guidelines</h2>
+<ol>
+   <li>Participants in Slammers Beach Volleyball play at their own risk.</li>
+   <li>Anyone playing is responsible for their own safety and should only play if they are capable. Check with your doctor before you begin.</li>
+   <li>Game fees must be paid prior to the start of the game.</li>    <li>Games may be cancelled by players up to 4 hours before hand to get a refund. Without 4 hours' notice, participants will forfeit the game and be charged 50% of the game fee.</li>
+</ol>
 </body>
 </html>
