Final files and images added
Final files added

--- a/Assignment 1 Project Plan for _Student Name_.html
+++ b/Assignment 1 Project Plan for _Student Name_.html
@@ -14,17 +14,14 @@
 <h1>CP1406 - Assignment 1 - Project Plan</h1>
 <p><strong>Name:</strong> Yinn Suang Koid</p>
 <h2>Goals</h2>
-<p>The Slammers Beach Volleyball website aims to increase revenue for the company by increasing the number of customers, primarily from playing volleyball and participating in the Slammers tournament, but also from other activities such as socialising at the licensed bar and venue hire for functions.</p>
-<p>The target outcome is an increase of at least 50% in the number of customers for the company after the website is launched. </p>
+<p>The Slammers Beach Volleyball website aims to increase revenue for the company by promoting the games and activites available to attract new customers..The target outcome is an increase of at least 50% in the number of customers for the company after the website is launched. </p>
 <h2>Success Evaluation</h2>
 <p>The site's success will be evaluated by measuring any increase in sales after the website has been launched within a 3-month period, and comparing that figure to the 3 months prior to the site's launch. All other advertising media will remain consistent during that period.</p>
 <h2>Target Audience</h2>
-<p>1. Local residents from the youth age group (15-30 years old) are who the site is aimed at.</p>
-<p>2. The site will have a simple yet sporty design with vibrant colours and images, and text which is easy-to-read. The site is designed to work across all devices and browsers on desktops, laptops, mobile phones or tablets. </p>
+<p>1. The site is aimed at local residents from the youth age group (15-30 years old).</p>
+<p>2. The site will have a simple layout with vibrant colours and the use of appropriate images. Text will be  easy-to-read, with highlighted text in parts for quick scanning of key information. Call-to-action buttons will be used to prompt user reaction to find out more by contacting the company or by registering online to play.</p>
 <h2>Site Flowchart</h2>
-<p><img src="https://learnjcu.jcu.edu.au/bbcswebdav/pid-2416182-dt-content-rid-4179292_1/courses/16-CP1406_CP1806-CNS_TSV-INT-SP2/plan.html" alt="Site Flowchart"></p>
+<p><img src="Slammers Site Flowchart-1.png" width="843" height="513" alt=""/></p>
 <h2>GitHub Repository</h2>
-<p><a href="http://github.com/...">Enter your repo name and edit the URL here. Make sure your GitHub repo is public.</a></p>
-
-
+<p>https://github.com/suangkoid/SlammersBeachVolleyball</p>
 </body></html>
