--- a/competitions.html
+++ b/competitions.html
@@ -8,9 +8,9 @@
 
 <body>
 <a name="top" id="top"></a>
-<div class="container">
-  	  <div id="header">
- 			 <div id="logo"><img src="slammerslogo.jpg" width="255" height="170" alt=""/></div>
+	<div class="container">
+	  <div id="header">
+ 			 <div id="logo"><img src="slammerslogo2.jpg" width="217" height="145" alt=""/></div>
     <h1>Slammers Beach Volleyball</h1>
     <ul><li><a href="index.html">Home</a></li><li><a href="aboutvolleyball.html">About Volleyball</a></li><li><a href="competitions.html">Competitions</a></li><li><a href="registration.html">Registration</a></li><li><a href="contactus.html">Contact Us</a></li></ul>
   				</div>
@@ -18,8 +18,9 @@
     <h2> Competitions</h2>
     <p>We organise our very own 'Slammers Tournament' for those keen to play in a professional,competitive atmosphere. <br>
       It is always an exciting event for both players and spectators alike. </p>
-    <p>Don't miss out on our next tournament season! The 4-a-side weekend competition starts August 21st... <a href="registration.html">Register</a> your team today!</p>
+    <p>Don't miss out on our next tournament season! The 4-a-side weekend competition starts August 21st... <a href="registration.html"><strong>Register</strong></a> your team today!</p>
     <p>Or come to cheer on your favourite team!</p>
+    <br>
     <div class="center">
       <p> <img src="tournament.jpg" width="360" height="540" alt=""/> <br>
         By David Bunting from England (Beach Volleyball Classic 2007) <br>
@@ -151,8 +152,10 @@
         <td>136</td>
       </tr>
     </table>
+    
+    <br>
     <div id="footer">
-      <p>Copyright &copy;2016 -YS Koid | <a href="#" target="_self">Top of Page</a> | <a href="#">Home</a> </p>
+      <p>Copyright &copy;2016 -YS Koid | <a href="#" target="_self">Top of Page</a> | <a href="index.html">Home</a> </p>
     </div>
   </div>
 </div>
