--- a/contactus.html
+++ b/contactus.html
@@ -8,16 +8,15 @@
 
 <body>
 <a name="top" id="top"></a>
-<div class="container">
-  	  <div id="header">
- 			 <div id="logo"><img src="slammerslogo.jpg" width="255" height="170" alt=""/></div>
+	<div class="container">
+	  <div id="header">
+ 			 <div id="logo"><img src="slammerslogo2.jpg" width="217" height="145" alt=""/></div>
     <h1>Slammers Beach Volleyball</h1>
     <ul><li><a href="index.html">Home</a></li><li><a href="aboutvolleyball.html">About Volleyball</a></li><li><a href="competitions.html">Competitions</a></li><li><a href="registration.html">Registration</a></li><li><a href="contactus.html">Contact Us</a></li></ul>
   				</div>
-       
        <div id="main">
        		<h2> Contact Us</h2>
-				<p>Contact us anytime to enquire about:</p>
+				<p>Please contact us via phone or email to enquire about:</p>
 					<ul>
 						<li>Playing at Slammers</li>
 						<li>Registering a new team</li> 
@@ -43,16 +42,17 @@
   
   			<tr>
  				 <td>Email:</td>
-  				<td>slammers@gmail.com</td>
+  				<td><a href="mailto:slammers@gmail.com">slammers@gmail.com</a></td>
   			</tr>
 		</table>
         <br>
-		<p>Our friendly staff is here to help with your enquiries, feedback or suggestions.</p>
+		<p>Our friendly staff is always ready to help with your enquiries, feedback or suggestions.</p>
 
-		<p>Call us today!</p>
+		<p>Call us today :)</p>
+        <br>
         
          <div id="footer">
- 			<p>Copyright &copy;2016 -YS Koid | <a href="#" target="_self">Top of Page</a> | <a href="#">Home</a> </p>
+ 			<p>Copyright &copy;2016 -YS Koid | <a href="#" target="_self">Top of Page</a> | <a href="index.html">Home</a> </p>
 			</div>
 		</div>
      </div> 
