--- a/guidelines.html
+++ b/guidelines.html
@@ -8,9 +8,9 @@
 
 <body>
 <a name="top" id="top"></a>
-<div class="container">
-  	  <div id="header">
- 			 <div id="logo"><img src="slammerslogo.jpg" width="255" height="170" alt=""/></div>
+	<div class="container">
+	  <div id="header">
+ 			 <div id="logo"><img src="slammerslogo2.jpg" width="217" height="145" alt=""/></div>
     <h1>Slammers Beach Volleyball</h1>
     <ul><li><a href="index.html">Home</a></li><li><a href="aboutvolleyball.html">About Volleyball</a></li><li><a href="competitions.html">Competitions</a></li><li><a href="registration.html">Registration</a></li><li><a href="contactus.html">Contact Us</a></li></ul>
   				</div>
@@ -24,9 +24,10 @@
    				<li>Game fees must be paid prior to the start of the game.</li>    
             	<li>Games may be cancelled by players up to 4 hours before hand to get a refund. Without 4 hours' notice, participants will forfeit the game and be charged 50% of the game fee.</li>
 			</ol>
+            <br>
             
          <div id="footer">
- 			<p>Copyright &copy;2016 -YS Koid | <a href="#" target="_self">Top of Page</a> | <a href="#">Home</a> </p>
+ 			<p>Copyright &copy;2016 -YS Koid | <a href="#" target="_self">Top of Page</a> | <a href="index.html">Home</a> </p>
 			</div>
 		</div>
      </div> 
